--- a/personalSite/src/main/resources/application.properties
+++ b/personalSite/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Email properties
 mail.sender.host = smtp.gmail.com
-smtp.authenticator.email = jartu2009di@gmail.com
-smpt.authenticator.password = kolinda2015new
+smtp.authenticator.email = fake@gmail.com
+smpt.authenticator.password = password
 
 ######## Profiles ###########
 # dev 	-> Development Profile
