--- a/personalSite/pom.xml
+++ b/personalSite/pom.xml
@@ -3,6 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	
 	<!-- Comment added-->
+	<!-- Comment added from GitHub -->
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.personalsite</groupId>
